# dns-server

./: .gitignore  Cargo.toml  DNS_RESPONSE_BUILDER.md  LICENSE  MULTITHREADED_IMPLEMENTATION_PLAN.md  README.md
src/: .rapid_test.sh.swp  actors.rs  cli.rs  codec.rs  errors.rs  handlers.rs  main.rs  parsers.rs  processor.rs  protocol.rs  rapid_test.sh  response_builder.rs
src/actors/: messages.rs  query_actor.rs  set_id_actor.rs
src/handlers/: query_handler.rs  set_id_handler.rs
